# MilitaryOutpostManagement-Qt5

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Controllers/: PlatoonController.cpp  PlatoonController.h
Data/: MilitaryOutpost.db  datamanager.cpp  datamanager.h  platoonmanager.cpp
Managers/: DataManager.cpp  DataManager.h  PlatoonManager.cpp  PlatoonManager.h  dutymanager.cpp  dutymanager.h  platoonmanager.cpp  platoonmanager.h  rankmanager.cpp  rankmanager.h  soldiermanager.cpp  soldiermanager.h  squadmanager.cpp  squadmanager.h  staticmanager.cpp  staticmanager.h  teammanager.cpp  teammanager.h
Models/: Duty.cpp  Duty.h  Platoon.cpp  Platoon.h  Soldier.cpp  Soldier.h  Squad.cpp  Squad.h  Team.cpp  Team.h  rank.cpp  rank.h
Views/: createdutyview.cpp  createdutyview.h  createdutyview.ui  createplatoonmenu.cpp  createplatoonmenu.h  createplatoonmenu.ui  createrankview.cpp  createrankview.h  createrankview.ui  createsoldierview.cpp  createsoldierview.h  createsoldierview.ui  createsquadview.cpp  createsquadview.h  createsquadview.ui  createteamview.cpp  createteamview.h  createteamview.ui  dashboard.cpp  dashboard.h  dashboard.ui  deletedutyview.cpp  deletedutyview.h  deletedutyview.ui  deleterankview.cpp  deleterankview.h  deleterankview.ui  deletesoldierview.cpp  deletesoldierview.h  deletesoldierview.ui  deletesquadview.cpp  deletesquadview.h  deletesquadview.ui  deleteteamview.cpp  deleteteamview.h  deleteteamview.ui  dutyview.cpp  dutyview.h  dutyview.ui  mainmenu.cpp  (+65 more)
